--- a/src/main/resources/templates/groups/groups.html
+++ b/src/main/resources/templates/groups/groups.html
@@ -1,54 +1,193 @@
-<!DOCTYPE html>
+<!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Groups</title>
-    <style type='text/css'>
-        ul.nav li.dropdown:hover ul.dropdown-menu {
-            display: block;
-        }
-    </style>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="../static/main.css">
+
+    <title>Tahut</title>
 </head>
+<style>
+    body {
+        background-color: #587a9db5
+    }
+
+    .flex-container {
+        display: flex;
+        --background-color: rgb(208, 227, 246);
+    }
+
+    .flex-container>div {
+        background-color: #fbfbfb;
+        margin: 10px;
+        padding: 20px;
+        font-size: 30px;
+    }
+
+    .navbar-brand.brand {
+        color: #b46d0a
+    }
+</style>
 
 <body>
-    <p>Create a new group:</p>
-    <form action="#" th:action="@{/groups}" method="post">
-        <p><input type="text" name="groupname" id="groupname" placeholder="Groupname" required /></p>
-        <p><input type="submit" value="Submit" id="submit" /> <input type="reset" value="Reset" /></p>
-    </form>
-    <br>------------------------------------------------<br>
-    <p>Groups managed by you:</p>
-    <div th:each="group : ${groups}">
-        <div class="card-body">
-            <span th:text="${group.groupname}" /> <br>
-        </div>
-        <br>
 
 
-        <div class="mt-3">
-            <form action="#" th:action="@{/addMember}" th:method="patch">
-            <label class="form-label" for="userId">New member:</label>
-            <select class="form-select" name="userId" id="userId">
-                <option value="" selected>Add a member</option>
-                <span th:each="addMember : ${users}">
-                    <option th:value="${addMember.getId}" th:text="${addMember.username}"></option>
+    <!-- navbar  -->
+    <nav class="navbar navbar-expand-md sticky-top navbar-dark" style="background-color: #465d84; color: #f0f0f0; ">
+        <div class="container-fluid">
+            <a class="navbar-brand brand" href="https://de.wikipedia.org/wiki/Thot"> Tahut </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <span class="navbar-text order-md-last">
+                    <div sec:authorize="isAuthenticated()">
+                        Hello <span sec:authentication="name"></span>
+                    </div>
                 </span>
-            </select>
-            <input type="hidden" th:value="${group.getId}" name="groupId" />
-            <input type="submit" value="Submit" id="submit" />
-            </form>
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/stickers">My Events</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Events by Group
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li th:each="group : ${myGroupMemberships}">
+                                <a class="dropdown-item" th:href="@{/stickers(group=${group.getId})}"
+                                    th:text="${group.getGroupname}"></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/groups">Manage Groups</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <br>-------------------------<br>
-    </div>
-    <br>------------------------------------------------<br>
-    <p>Groups where are you member from:</p>
-    <div th:each="member : ${member}">
-        <div class="card-body">
-            <span th:text="${member.groupname}" />
+
+    </nav>
+    <!-- end navbar  -->
+
+    <div class="album py-5 bg-light">
+        <div class="container">
+
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+                <!-- Create New Group -->
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="https://cdn.pixabay.com/photo/2018/07/31/14/09/young-people-3575167_960_720.jpg"
+                            height="180px" class="card-img-top" alt="...">
+
+                        <div class="card-body">
+                            <h5 class="card-title"> New group </h5>
+                            <p class="card-text"> create a new groupspace for your family, friends or allies and share
+                                your events and
+                                dates with them in a shared planner </p>
+                            <form action="#" th:action="@{/groups}" method="post">
+                                <div class="input-group input-group-sm mb-3">
+                                    <input type="text" name="groupname" id="groupname" class="form-control"
+                                        placeholder="Groupname" required>
+                                    <button class="btn btn-outline-primary" id="submit" type="submit">Create</button>
+                                </div>
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Manage Group Members -->
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="https://www.tagesschau.de/multimedia/bilder/eu-ukraine122~_v-gross20x9.jpg"
+                            height="180px" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"> Owned groups </h5>
+                            <p class="card-text"> welcome friends, family or anyone with the same mindset about freedom
+                                and peace to
+                                your groups </p>
+
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item" th:each="group : ${groups}">
+                                    <span th:text="${group.groupname}"></span>
+                                    <ul class="list-group list-group">
+                                        <li class="list-group-item" th:each="member : ${group.getMembers}" th:text="${member.getUsername}"></li>
+                                        <li class="list-group-item">
+                                            <form action="#" th:action="@{/addMember}" th:method="patch">
+                                                <div class="input-group input-group-sm">
+                                                    <select class="form-select" name="userId" id="userId">
+                                                        <option selected disabled>Select user...</option>
+                                                        <span th:each="addMember : ${users}">
+                                                            <option th:value="${addMember.getId}" th:text="${addMember.username}"></option>
+                                                        </span>
+                                                    </select>
+                                                    <input type="hidden" th:value="${group.getId}" name="groupId" id="groupId" />
+                                                    <button class="btn btn-outline-primary"
+                                                        type="submit">Add</button>
+                                                </div>
+                                            </form>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Leave Groups -->
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="https://cdn.pixabay.com/photo/2018/03/25/10/02/farewell-3258939_960_720.jpg"
+                            height="180px" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"> Memberships </h5>
+                            <p class="card-text"> leave any groups whenever you feel you no longer share the same
+                                mindset with the
+                                other group members </p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item" th:each="group : ${memberships}">
+                                    <button type="button" class="btn btn-sm btn-outline-warning">
+                                        Leave
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-door-open" viewBox="0 0 16 16">
+                                            <path
+                                                d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z" />
+                                            <path
+                                                d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117zM11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5zM4 1.934V15h6V1.077l-6 .857z" />
+                                        </svg>
+                                    </button>
+                                    <span th:text="${group.groupname}" />
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
+
+
+
+
 </body>
 
 </html>
